--- a/main.css
+++ b/main.css
@@ -1,14 +1,3 @@
-.loading{ width: 200px; height: 200px; position: relative; }
-.loading::before,.loading::after{ content: ''; position: absolute; width: 0px; height: 0px; background: black; border-radius: 50%; top: 0; left: 0; bottom: 0; right: 0; margin: auto; animation: s 1.5s linear infinite; }
-.loading::after{ animation-delay: 0.75s; }
-@keyframes s{ 
-  0%{ width: 0px; height: 0px; opacity: 1; }
-  100%{ width: 100px; height: 100px; opacity: 0; }
-}
-.icon { width: 1em; height: 1em; vertical-align: -0.15em; fill: currentColor; overflow: hidden; }
-.site-welcome{ display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #888; z-index: 1; justify-content: center; align-items: center; }
-.site-welcome.active{ display: flex; }
-
 body { background: #efefef; margin: 0; }
 a { color: inherit; text-decoration: none; }
 * { margin: 0; padding: 0; }
@@ -35,6 +24,7 @@ h1,h2,h3,h4,h5,h6{ font-weight: normal; }
     transform: translateY(0);
   }
 }
+.icon { width: 1em; height: 1em; vertical-align: -0.15em; fill: currentColor; overflow: hidden; }
 .topNavBar { padding: 20px 0; position: fixed; top: 0; left: 0; width: 100%; 
   transition: all 0.5s; color: #b7b7b7;
 }
@@ -126,8 +116,9 @@ body > main .downloadResume:hover {
 .selfIntroduction { max-width: 940px; margin-left: auto; margin-right: auto; text-align: center; font-family: kai; line-height: 1.8; font-size: 18px; }
 
 section.skills,
-section.portfolio{ max-width: 940px; margin-left: auto; margin-right: auto; margin-top: 60px; }
+section.portfolio{max-width: 940px;margin-left: auto;margin-right: auto;margin-top: 60px;}
 section.skills > h2 ,
+section.message > h2 ,
 section.portfolio > h2 { text-align: center; color: #3d4451; font-size: 34px; line-height: 1.2; font-weight: 600; }
 section.skills h3 { font-size: 14px; line-height: 1.1; padding-right: 40px; }
 section.skills > ol { background: white; box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5); padding: 42px 50px 10px; margin-top: 30px; }
@@ -155,5 +146,17 @@ section.portfolio .swiper-button-next{
   }
 section.portfolio .swiper-button-next{ left: 100%;right: auto; }
 
-section.portfolio > h2 { text-align: center; color: #3d4451; font-size: 34px; line-height: 1.2; font-weight: 600; }
+
+
+
+
+section.message > ol{
+  max-width: 700px;
+  margin: 0 auto;
+  border-top: 1px solid #DDD;
+}
+section.message > ol > li {
+  padding: 16px;
+  border-bottom: 1px solid #DDD;
+}
 
